fix search alignment

--- a/client/table/index.styl
+++ b/client/table/index.styl
@@ -94,6 +94,7 @@
 	position fixed
 	right 20px
 	top 12px
+	display flex
 
 	.btn-search
 		font-style normal
